Fixed appt request alignment

--- a/project.css
+++ b/project.css
@@ -120,7 +120,7 @@ footer { background-color: #626B84;
 	label { float: left;
 		display: block; 
 		text-align: right; 
-		width: 10em; 
+		width: 14em; 
 		padding-right: 15px; }
 	#mySubmit { margin-left: auto;
 				margin-right: auto; }
